commenting out the require statement

--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -35,7 +35,7 @@
     });
 });
 // Required for side-effects
-require("firebase/firestore");
+//require("firebase/firestore");
 
 // Initialize Cloud Firestore through Firebase
 firebase.initializeApp({
