--- a/flaskApp/app/templates/resources.html
+++ b/flaskApp/app/templates/resources.html
@@ -1,5 +1,14 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
 
+<style>
+body {
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  padding: 50px 100px;
+  max-width: 55.25em;
+  font-family: 'Open Sans', sans-serif;
+}
+</style>
+
 {% extends "base.html" %}
 
 {% block content %}
