--- a/flaskApp/app/templates/about.html
+++ b/flaskApp/app/templates/about.html
@@ -1,4 +1,14 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
+<style>
+    body {
+      font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+      padding: 50px 100px;
+      max-width: 55.25em;
+      font-family: 'Open Sans', sans-serif;
+    }
+</style>
 
 {% extends "base.html" %}
 
@@ -10,6 +20,11 @@
     <li><a href="/resources">Resources</a></li>
     <li><a href="/settings">Settings</a></li>
 </ul>
+
+<header class="w3-container w3-center w3-padding-32"> 
+    <h1><b>ABOUT</b></h1>
+    <p>Learn about how our app started!</p>
+</header>
 
     <body style="background-color:pink;">
 
