--- a/flaskApp/app/static/css/style.css
+++ b/flaskApp/app/static/css/style.css
@@ -5,7 +5,7 @@
 #mapNavContainer {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: relative;
 }
 
 #navBarMap {
@@ -28,42 +28,10 @@
   color: white;
   height: auto;
   position: absolute;
-  margin: 10px 0px 0px 200px;
+  margin: 10px 0px 0px;
   border: 1px solid black;
   padding: 5px;
 }
-
-/* Navigation Bar */
-
-
-  li a {
-      display: block;
-      color: #000;
-      padding: 8px 16px;
-      text-decoration: none;
-    }
-    
-  /* Change the link color on hover */
-  li a:hover {
-      background-color: #555;
-      color: white;
-    }
-
-  li a.active {
-      background-color: #f8a6e4;
-      color: white;
-    }
-
-  li a:hover:not(.active) {
-      background-color: #555;
-      color: white;
-    }
-
-  .background{
-    color: #999999;
-    top: 0;
-    left: 0;
-  }
 
 /* Map */
 
@@ -216,4 +184,17 @@
 
 h5, h6, .info_reveal a {
   font-family: 'Open Sans Condensed', sans-serif;
+}
+
+
+div.about {
+  padding: 20px;
+  font-size: 16;
+  text-align: center;
+  margin-left: 500px;
+  margin-right: 500px;
+}
+
+body {
+  font-family: 'Noto Sans';font-size: 22px;
 }
