--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -1,4 +1,5 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <!-- The core Firebase JS SDK is always required and must be listed first -->
 <script src="https://www.gstatic.com/firebasejs/7.13.2/firebase-app.js"></script>
@@ -67,7 +68,7 @@ function initMap() {
         // Creates the map, centered on Kent State University
         var kent_State = {lat: 41.1406508, lng: -81.3461343};
         var map = new google.maps.Map(
-            document.getElementById('map'), {zoom: 18, center: kent_State});
+            document.getElementById('map'), {zoom: 18, center: kent_State, mapTypeControl: false});
     
         infoWindow = new google.maps.InfoWindow;
 
@@ -85,10 +86,10 @@ function initMap() {
             {lat:41.149772, lng:-81.346146} //janik drive
         ];
 
-        // var pos = { 
-        //             lat: position.coords.latitude,
-        //             lng: position.coords.longitude
-        //         };
+        //var pos = { 
+        //            lat: position.coords.latitude,
+        //            lng: position.coords.longitude
+        //        };
         var pos = testPositions[2];
         console.log(pos);
 
@@ -346,21 +347,34 @@ function initMap() {
             }
         }
 }
+
+function w3_open() {
+      document.getElementById("mySidebar").style.display = "block";
+}
+    
+function w3_close() {
+      document.getElementById("mySidebar").style.display = "none";
+}
 </script>
 
 <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDgh8GWzkyvEprIotnrv-9ZYWvNQXpBCT8&callback=initMap">
 </script>
 
-<div id="mapNavContainer">
-    <div id="map"></div>
-        <ul id="navBarMap">
-            <li><a class="active" href="/index">Main Menu</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/resources">Resources</a></li>
-            <li><a href="/settings">Settings</a></li>
-        </ul>
-</div>
 
+
+<div id="mapNavContainer">
+    <div z-index="0" id="map"></div>
+    <div class="w3-sidebar w3-bar-block w3-animate-opacity" style="display:none" id="mySidebar" height:50%>
+        <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
+        <a href="/index" class="w3-bar-item w3-button">Map</a>
+        <a href="/about" class="w3-bar-item w3-button">About</a>
+        <a href="/resources" class="w3-bar-item w3-button">Resources</a>
+    </div>
+
+    <div class="w3">
+        <button class="w3-button w3 w3-xlarge w3-display-topleft" onclick="w3_open()">☰</button>
+    </div>
+</div>
 
 {% endblock %}
