--- a/flaskApp/app/templates/resources.html
+++ b/flaskApp/app/templates/resources.html
@@ -1,30 +1,38 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/style.css') }}">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
 <style>
-body {
-  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  padding: 50px 100px;
-  max-width: 55.25em;
-  font-family: 'Open Sans', sans-serif;
-}
+  /*
+    body {
+      font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+      padding: 0px 0px 0px 50px;
+      max-width: 55.25em;
+      font-family: 'Open Sans', sans-serif;
+    }
+    */
 </style>
 
 {% extends "base.html" %}
 
 {% block content %}
 
-<ul id="navBarMain">
-    <li><a href="/index">Main Menu</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a class="active" href="/resources">Resources</a></li>
-    <li><a href="/settings">Settings</a></li>
-</ul>
-
 <body style="background-color:pink;">
 
+<div class="w3-sidebar w3-bar-block w3-light-grey w3-animate-opacity" height="175px" style="display:none" id="mySidebar">
+  <button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
+  <a href="/index" class="w3-bar-item w3-button">Map</a>
+  <a href="/about" class="w3-bar-item w3-button">About</a>
+  <a href="/resources" class="w3-bar-item w3-button">Resources</a>
+</div>
 
-<br><br><br><br><br><br>
-<br><br><br><br><br><br>
+<div class="w3">
+  <button class="w3-button w3 w3-xlarge" onclick="w3_open()">☰</button>
+</div>
+
+<header class="w3-container w3-center w3-padding-32"> 
+  <h1><b>RESOURCES</b></h1>
+  <p>Explore helpful resources!</p>
+</header>
 
 <ul class="responsive_grid">
   <li>
@@ -101,5 +109,15 @@ body {
       </div>
     </div>
   </li> 
+
+<script>
+    function w3_open() {
+      document.getElementById("mySidebar").style.display = "block";
+    }
+    
+    function w3_close() {
+      document.getElementById("mySidebar").style.display = "none";
+    }
+</script>
 
 {% endblock %}
