mapTypeControl set to false again

--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -473,7 +473,7 @@
         // Creates the map, centered on Kent State University
         var kent_State = {lat: 41.1406508, lng: -81.3461343};
         var map = new google.maps.Map(
-            document.getElementById('map'), {zoom: 18, center: kent_State});
+            document.getElementById('map'), {zoom: 18, center: kent_State, mapTypeControl:false});
     
         infoWindow = new google.maps.InfoWindow;
 
