Added page consistency on nav bar

--- a/flaskApp/app/templates/index.html
+++ b/flaskApp/app/templates/index.html
@@ -452,6 +452,9 @@ src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCvsTV4dKJhgdtxt54eZ-bxLux
         <a href="/index" class="w3-bar-item w3-button">Map</a>
         <a href="/about" class="w3-bar-item w3-button">About</a>
         <a href="/resources" class="w3-bar-item w3-button">Resources</a>
+        <div class="w3-display-bottomleft" style="width: 100px;"> 
+            <img src="../static/resources/generatedtext.png" style="width: 200; padding-bottom: 20;">
+        </div>
     </div>
 
     <div class="w3">
